--- a/app/model/model.html
+++ b/app/model/model.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="//towns.cz/lib/jquery/plugins/touch-punch.js"></script>
 
 </head>
 <body onload="drawModel()">
